[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/terrain/houses/RothFoundationSides.material" type="Material" id=8]
[ext_resource path="res://assets/terrain/houses/RothFoundationFloor.material" type="Material" id=9]
[ext_resource path="res://scenes/formation/terrain/buildings/RothFoundation.gd" type="Script" id=11]
[ext_resource path="res://scenes/formation/terrain/buildings/RothenburgHutProcedural.gd" type="Script" id=12]
[ext_resource path="res://assets/terrain/houses/bm_s02_floor_stone01.png" type="Texture" id=13]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 13 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -4.5, 0.5, -2, 9.00001, 1.00136e-05, 4 ),
"array_data": PoolByteArray( 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 126, 0, 0, 127, 128, 68, 0, 192, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 64, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 126, 0, 0, 127, 128, 196, 0, 64, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 126, 0, 0, 127, 128, 68, 0, 192, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 126, 0, 0, 127, 128, 196, 0, 64, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 192 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 9 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -5, 0.5, -2.5, 10, 1.00136e-05, 5 ),
"array_data": PoolByteArray( 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 69, 0, 193, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 69, 0, 65, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 65, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 69, 0, 193, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 65, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 193, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 64, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 65, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 65, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 64, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 65, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 64, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 193, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 65, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 197, 0, 65, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 193, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 197, 0, 65, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 197, 0, 193, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 193, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 192, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 192, 0, 0, 144, 64, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 68, 0, 193, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 0, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 192, 0, 0, 144, 192, 0, 0, 0, 63, 0, 0, 32, 192, 0, 127, 0, 0, 127, 0, 0, 127, 128, 196, 0, 193 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": SubResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -5, 0, -2.5, 10, 0.5, 5.00001 ),
"array_data": PoolByteArray( 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 32, 64, 127, 0, 0, 0, 0, 0, 127, 127, 0, 69, 0, 0, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 64, 127, 0, 0, 0, 0, 0, 127, 127, 0, 69, 0, 56, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 192, 127, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 56, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 32, 64, 127, 0, 0, 0, 0, 0, 127, 127, 0, 69, 0, 0, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 192, 127, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 56, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 32, 192, 127, 0, 0, 0, 0, 0, 127, 127, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 128, 75, 0, 0, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 128, 75, 0, 56, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 0, 69, 0, 56, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 128, 75, 0, 0, 0, 0, 160, 192, 0, 0, 0, 63, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 0, 69, 0, 56, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 32, 64, 0, 0, 129, 0, 127, 0, 0, 127, 0, 69, 0, 0, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 32, 192, 129, 0, 0, 0, 0, 0, 129, 127, 0, 77, 0, 0, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 192, 129, 0, 0, 0, 0, 0, 129, 127, 0, 77, 0, 56, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 64, 129, 0, 0, 0, 0, 0, 129, 127, 128, 75, 0, 56, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 32, 192, 129, 0, 0, 0, 0, 0, 129, 127, 0, 77, 0, 0, 0, 0, 160, 64, 0, 0, 0, 63, 0, 0, 32, 64, 129, 0, 0, 0, 0, 0, 129, 127, 128, 75, 0, 56, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 32, 64, 129, 0, 0, 0, 0, 0, 129, 127, 128, 75, 0, 0 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 8 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 18
}

[sub_resource type="BoxShape" id=5]
extents = Vector3( 5, 0.25, 2.5 )

[node name="RothenburgHutProcedual" type="Spatial"]
script = ExtResource( 12 )

[node name="RothFoundation" type="StaticBody" parent="."]
script = ExtResource( 11 )
wall_mat = ExtResource( 8 )
doorframe_mat = SubResource( 1 )
floor_mat = ExtResource( 9 )

[node name="FoundationFloor" type="MeshInstance" parent="RothFoundation"]
mesh = SubResource( 2 )
material/0 = null

[node name="FoundationFrame" type="MeshInstance" parent="RothFoundation"]
mesh = SubResource( 3 )
material/0 = null

[node name="FoundationWall" type="MeshInstance" parent="RothFoundation"]
mesh = SubResource( 4 )
material/0 = null

[node name="FoundationBaseCollide" type="CollisionShape" parent="RothFoundation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 5 )
